# trellis

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  PRODUCT.md  README.md  biome.json
demos/rust/: Cargo.toml  README.md
demos/rust/contracts/: device.rs  service.rs
demos/rust/device/: Cargo.toml
demos/rust/device/src/: main.rs
demos/rust/service/: Cargo.toml
demos/rust/service/src/: main.rs
rust/: Cargo.toml  README.md
rust/bootstrap/: Cargo.toml
rust/bootstrap/src/: contract_input.rs  main.rs
rust/crates/.cargo/: config.toml
rust/crates/auth/: Cargo.toml
rust/crates/auth-adapters/: Cargo.toml
rust/crates/auth-adapters/src/: bootstrap.rs  lib.rs  request_validator.rs
rust/crates/auth-adapters/tests/: bootstrap_adapter_test.rs  request_validator_adapter_test.rs
rust/crates/auth/src/: browser_login.rs  client.rs  device_activation.rs  error.rs  lib.rs  models.rs  protocol.rs  session_store.rs  tests.rs  workload_activation.rs
rust/crates/bootstrap/: Cargo.toml
rust/crates/bootstrap/src/: constants.rs  error.rs  generation.rs  lib.rs  nats_config.rs  nats_material.rs  output.rs  runtime_config.rs  tests.rs  types.rs  validate.rs
rust/crates/cli/: Cargo.toml  build.rs
rust/crates/cli/src/: agent_contract.rs  app.rs  cli.rs  cli_contract.rs  contract_input.rs  core_client.rs  lib.rs  main.rs  output.rs  self_update.rs
rust/crates/cli/tests/: cli_contract_manifest_test.rs  command_boundary_test.rs
rust/crates/client/: Cargo.toml
rust/crates/client/src/: auth.rs  client.rs  descriptor.rs  error.rs  lib.rs  operations.rs  proof.rs  state.rs  tests.rs  transfer.rs
rust/crates/client/tests/: operations_start_get_test.rs  state_store_test.rs  transfer_put_get_test.rs
rust/crates/codegen-rust/: Cargo.toml
rust/crates/codegen-rust/src/: lib.rs
rust/crates/codegen-ts/: Cargo.toml
rust/crates/codegen-ts/src/: lib.rs
rust/crates/contracts/: Cargo.toml  build.rs
rust/crates/contracts/schemas/: trellis.catalog.v1.schema.json  trellis.contract.v1.schema.json
rust/crates/contracts/src/: builder.rs  catalog.rs  error.rs  lib.rs  manifest.rs  model.rs  pagination.rs  tests.rs
rust/crates/contracts/tests/: builder_dsl_test.rs
rust/crates/core-bootstrap/: Cargo.toml
rust/crates/core-bootstrap/src/: bootstrap.rs  lib.rs
rust/crates/core-bootstrap/tests/: bootstrap_adapter_test.rs
rust/crates/generate-runner/: Cargo.toml
rust/crates/generate-runner/src/: lib.rs
rust/crates/integration-harness/: Cargo.toml
rust/crates/integration-harness/src/: admin.rs  app.rs  app_identity_approval.rs  browser.rs  catalog_authority.rs  catalog_repair.rs  cli.rs  container.rs  deno_fixture.rs  deployment_authority.rs  device_activation.rs  events.rs  feeds.rs  fixture.rs  health.rs  jobs.rs  lib.rs  main.rs  nats.rs  operations.rs  optional_uses.rs  portal.rs  process.rs  public_api_guard.rs  report.rs  resources.rs  rpc.rs  runtime.rs  service_approval.rs  state.rs  transfer.rs  workspace.rs
rust/crates/jobs/: Cargo.toml
rust/crates/jobs/src/: active_job.rs  api.rs  bindings.rs  events.rs  keys.rs  lib.rs  manager.rs  projection.rs  publisher.rs  runtime_ref.rs  runtime_worker.rs  types.rs
rust/crates/jobs/tests/: active_job_test.rs  bindings_test.rs  event_helpers_test.rs  job_manager_create_test.rs  job_manager_keyed_test.rs  job_manager_process_test.rs  key_coordinator_test.rs  projection_test.rs  registry_test.rs  runtime_worker_test.rs  typed_queue_api_test.rs  types_test.rs
rust/crates/local-bootstrap/: Cargo.toml
rust/crates/local-bootstrap/src/: lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: lib.rs  mode.rs  server.rs  shutdown.rs  supervisor.rs
rust/crates/server/: Cargo.toml
rust/crates/server/src/: bindings.rs  error.rs  lib.rs  request_loop.rs  router.rs  runtime.rs  service.rs  service_host.rs
rust/crates/server/tests/: bootstrap_ports_test.rs  bootstrap_validation_test.rs  connect_service_api_test.rs  request_loop_test.rs  service_host_bootstrap_test.rs  service_runtime_nats_it.rs
rust/crates/service/: Cargo.toml
rust/crates/service-jobs/: Cargo.toml
rust/crates/service-jobs/contracts/: trellis_jobs.manifest.json  trellis_jobs.rs
rust/crates/service-jobs/src/: advisory.rs  bootstrap.rs  contract.rs  janitor.rs  kv_query.rs  lib.rs  main.rs  paths.rs  projector.rs  query.rs  router.rs  worker_presence.rs
rust/crates/service-jobs/tests/: advisory_test.rs  janitor_test.rs  key_format_test.rs  sdk_alignment_test.rs  service_runtime_nats_it.rs  wire_models_test.rs  worker_presence_test.rs
rust/crates/service-runtime/: Cargo.toml
rust/crates/service-runtime/src/: lib.rs
rust/crates/service/src/: bindings.rs  bootstrap_ports.rs  connected.rs  descriptor.rs  error.rs  lib.rs  operations.rs  request_loop.rs  resources.rs  router.rs  runtime.rs  service.rs  service_host.rs  transfer.rs
rust/crates/service/tests/: authenticated_router_test.rs  bootstrap_ports_test.rs  bootstrap_validation_test.rs  connect_service_api_test.rs  connected_service_test.rs  feed_runtime_test.rs  operation_runtime_control_test.rs  operations_start_get_test.rs  (+6 more)
rust/crates/tooling-support/: Cargo.toml
rust/crates/trellis/: Cargo.toml
rust/crates/trellis-auth/: Cargo.toml
rust/crates/trellis-auth-adapters/: Cargo.toml
rust/crates/trellis-cli/: Cargo.toml
rust/crates/trellis-cli-participant/: Cargo.toml  build.rs  trellis.cli@v1.json
rust/crates/trellis-client/: Cargo.toml
rust/crates/trellis-codegen-rust/: Cargo.toml
rust/crates/trellis-codegen-ts/: Cargo.toml
rust/crates/trellis-contracts/: Cargo.toml  build.rs
rust/crates/trellis-core-bootstrap/: Cargo.toml
rust/crates/trellis-jobs/: Cargo.toml
rust/crates/trellis-sdk-auth/: Cargo.toml
rust/crates/trellis-sdk-core/: Cargo.toml
rust/crates/trellis-sdk-trellis-core/: Cargo.toml
rust/crates/trellis-server/: Cargo.toml
rust/crates/trellis-service-jobs/: Cargo.toml
rust/crates/trellis-test/: Cargo.toml
rust/tools/generate/: Cargo.toml  build.rs
rust/xtask/: Cargo.toml
rust/xtask/src/: main.rs  release.rs
xtask/: Cargo.toml
(+1550 files in other folders)
