[workspace]
members = [
  "crates/auth",
  "crates/auth-adapters",
  "crates/core-bootstrap",
  "crates/jobs",
  "crates/service-jobs",
  "crates/server",
  "crates/contracts",
  "crates/codegen-ts",
  "crates/codegen-rust",
  "crates/client",
  "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.8.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/qlever-llc/trellis"

[workspace.dependencies]
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "time"] }
async-nats = "0.47.0"
bytes = "1.11.1"
futures-util = "0.3.32"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
comfy-table = "7.2.2"
heck = "0.5.0"
jsonschema = "0.46.0"
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = "4.3.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
time = { version = "0.3.47", features = ["formatting"] }
self_update = { version = "0.44.0", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls", "ureq"] }
trellis-sdk-auth = { path = "../generated/rust/sdks/auth", version = "0.8.2" }
trellis-sdk-core = { path = "../generated/rust/sdks/trellis-core", version = "0.8.2" }
trellis-sdk-jobs = { path = "../generated/rust/sdks/jobs", version = "0.8.2" }
