[workspace]
members = [
  "crates/auth",
  "crates/trellis",
  "crates/auth-adapters",
  "crates/core-bootstrap",
  "crates/local-bootstrap",
  "crates/jobs",
  "crates/service-jobs",
  "crates/service-runtime",
  "crates/service",
  "crates/contracts",
  "crates/codegen-ts",
  "crates/codegen-rust",
  "crates/generate-runner",
  "crates/integration-harness",
  "crates/client",
  "crates/cli",
]
default-members = [
  "crates/auth",
  "crates/trellis",
  "crates/auth-adapters",
  "crates/core-bootstrap",
  "crates/local-bootstrap",
  "crates/jobs",
  "crates/service-jobs",
  "crates/service-runtime",
  "crates/service",
  "crates/contracts",
  "crates/codegen-ts",
  "crates/codegen-rust",
  "crates/generate-runner",
  "crates/client",
  "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.10.18"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/qlever-llc/trellis"

[workspace.dependencies]
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std"] }
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "time"] }
async-nats = "0.47.0"
bytes = "1.11.1"
futures-util = "0.3.32"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
comfy-table = "7.2.2"
heck = "0.5.0"
jsonschema = { version = "0.46.0", default-features = false }
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = "4.3.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
time = { version = "=0.3.46", features = ["formatting"] }
self_update = { version = "0.44.0", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls", "ureq"] }
trellis-sdk-auth = { path = "../generated/packages/cargo/auth", version = "0.10.18" }
trellis-sdk-core = { path = "../generated/packages/cargo/trellis-core", version = "0.10.18" }
trellis-sdk-health = { path = "../generated/packages/cargo/health", version = "0.10.18" }
trellis-sdk-jobs = { path = "../generated/packages/cargo/jobs", version = "0.10.18" }
trellis-sdk-state = { path = "../generated/packages/cargo/state", version = "0.10.18" }
