[package]
name = "xtask-shim"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
trellis-generate-runner = { path = "../rust/crates/generate-runner" }

[[bin]]
name = "xtask-shim"
path = "../rust/xtask/src/main.rs"
