[workspace]
members = ["device", "service"]
exclude = ["generated/packages/cargo-participants/demo-device", "generated/packages/cargo/demo-service"]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = "1.0.100"
async-nats = "0.47.0"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.10.0"
time = { version = "0.3.47", features = ["formatting"] }
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
trellis = { package = "trellis-rs", path = "../../rust/crates/trellis" }
trellis-participant-demo-device = { path = "generated/packages/cargo-participants/demo-device" }
trellis-sdk-demo-service = { path = "generated/packages/cargo/demo-service" }
