[package]
name = "trellis-bootstrap-cli"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
trellis-codegen-rust = { path = "../crates/trellis-codegen-rust" }
trellis-codegen-ts = { path = "../crates/trellis-codegen-ts" }
trellis-contracts = { path = "../crates/trellis-contracts" }
