[package]
name = "trellis-rust-demo-service"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
trellis-auth.workspace = true
trellis-auth-adapters.workspace = true
trellis-client.workspace = true
trellis-core-bootstrap.workspace = true
trellis-jobs.workspace = true
trellis-sdk-demo-service.workspace = true
trellis-sdk-core.workspace = true
trellis-service.workspace = true
