[package]
name = "trellis-auth-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bootstrap and request-validation adapters for the generated Trellis auth SDK."

[dependencies]
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
trellis-client = { path = "../client", version = "0.9.0" }
trellis-auth = { path = "../auth", version = "0.9.0" }
trellis-service = { path = "../service", version = "0.9.0" }

[dev-dependencies]
trellis-sdk-auth.workspace = true
