[package]
name = "trellis-auth-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bootstrap and request-validation adapters for the generated Trellis auth SDK."
publish = false

[dependencies]
trellis-rs = { path = "../trellis", version = "0.10.21" }

[dev-dependencies]
bytes.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
