[package]
name = "trellis-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication flows and session helpers for Trellis clients."

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
hmac = "0.12.1"
hkdf = "0.12.4"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
thiserror.workspace = true
tokio.workspace = true
trellis-client = { path = "../client", version = "0.7.0" }
trellis-sdk-auth = { path = "../../../generated/rust/sdks/auth", version = "0.7.0" }
url = "2.5.8"
