[package]
name = "trellis-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication flows and session helpers for Trellis clients."

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
hmac = "0.13.0"
hkdf = "0.13.0"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
trellis-client = { path = "../client", version = "0.8.2" }
trellis-sdk-auth.workspace = true
url = "2.5.8"
