[package]
name = "trellis-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication flows and session helpers for Trellis clients."
publish = false

[dependencies]
trellis-rs = { path = "../trellis", version = "0.10.22" }
