[package]
name = "trellis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for generating, validating, and operating Trellis contracts and services."

[dependencies]
async-nats.workspace = true
clap.workspace = true
clap_complete.workspace = true
comfy-table.workspace = true
owo-colors.workspace = true
serde.workspace = true
serde_json.workspace = true
json5 = "0.4.1"
tokio.workspace = true
trellis-client = { path = "../client", version = "0.6.1" }
trellis-auth = { path = "../auth", version = "0.6.1" }
trellis-codegen-rust = { path = "../codegen-rust", version = "0.6.1" }
trellis-codegen-ts = { path = "../codegen-ts", version = "0.6.1" }
trellis-contracts = { path = "../contracts", version = "0.6.1" }
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
base64.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rand = "0.10.0"
tempfile = "3.27.0"

[[bin]]
name = "trellis"
path = "src/main.rs"

[dev-dependencies]
trellis-sdk-auth = { path = "../../../generated/rust/sdks/auth", version = "0.6.1" }
trellis-sdk-core = { path = "../../../generated/rust/sdks/trellis-core", version = "0.6.1", package = "trellis-sdk-core" }
