[package]
name = "trellis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for generating, validating, and operating Trellis contracts and services."
publish = false

[dependencies]
async-nats.workspace = true
clap.workspace = true
clap_complete.workspace = true
comfy-table.workspace = true
owo-colors.workspace = true
qrcode = { version = "0.14.1", default-features = false }
serde.workspace = true
serde_json.workspace = true
json5 = "1.3.1"
tokio.workspace = true
trellis-rs = { path = "../trellis", version = "0.19.0" }
trellis-codegen-rust = { path = "../codegen-rust", version = "0.19.0" }
trellis-codegen-ts = { path = "../codegen-ts", version = "0.19.0" }
trellis-contracts = { path = "../contracts", version = "0.19.0" }
trellis-local-bootstrap = { path = "../local-bootstrap", version = "0.19.0" }
trellis-generate = { path = "../../tools/generate", version = "0.19.0" }
trellis-bootstrap = { path = "../bootstrap", version = "0.19.0" }
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
base64.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rand = "0.10.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rustls.workspace = true
tempfile = "3.27.0"
self_update.workspace = true
time.workspace = true
ulid = "1.2.1"

[[bin]]
name = "trellis"
path = "src/main.rs"
