[package]
name = "trellis-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Client transport and session primitives for Trellis services."
publish = false

[dependencies]
trellis = { path = "../trellis", version = "0.9.0" }

[dev-dependencies]
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
