[package]
name = "trellis-codegen-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust code generation for Trellis contract manifests."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml = "1.1.2"
trellis-contracts = { path = "../contracts", version = "0.8.2" }
