[package]
name = "trellis-codegen-ts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TypeScript code generation for Trellis contract manifests."

[dependencies]
serde_json.workspace = true
thiserror.workspace = true
trellis-contracts = { path = "../contracts", version = "0.8.1" }
