[package]
name = "trellis-codegen-ts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TypeScript code generation for Trellis contract manifests."
publish = false

[dependencies]
oxc_allocator = "0.129.0"
oxc_parser = "0.129.0"
oxc_span = "0.129.0"
serde_json.workspace = true
thiserror.workspace = true
trellis-contracts = { path = "../contracts", version = "0.10.17" }
