[package]
name = "trellis-core-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bootstrap adapters for the generated Trellis core SDK."

[dependencies]
futures-util.workspace = true
trellis-client = { path = "../client", version = "0.7.0" }
trellis-sdk-core.workspace = true
trellis-server = { path = "../server", version = "0.7.0" }

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
