[package]
name = "trellis-core-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bootstrap adapters for the generated Trellis core SDK."
publish = false

[dependencies]
trellis = { path = "../trellis", version = "0.9.0" }

[dev-dependencies]
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
