[package]
name = "trellis-integration-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Integration harness support for Trellis xtask workflows."
publish = false

[dependencies]
async-nats.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
miette.workspace = true
nkeys = "0.4"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde_json.workspace = true
thirtyfour = "0.36.1"
tokio.workspace = true
trellis-rs = { path = "../trellis" }
trellis-local-bootstrap = { path = "../local-bootstrap" }
time.workspace = true
serde.workspace = true
tempfile = "3.27.0"
tracing.workspace = true
tracing-subscriber.workspace = true
