[package]
name = "trellis-jobs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared jobs models, reducers, and helpers for Trellis."
publish = false

[dependencies]
trellis-rs = { path = "../trellis", version = "0.10.18" }

[dev-dependencies]
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
