[package]
name = "trellis-jobs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared jobs models, reducers, and helpers for Trellis."
publish = false

[dependencies]
trellis-rs = { path = "../trellis", version = "0.11.0" }
async-nats.workspace = true
bytes.workspace = true
futures-util.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
ulid = "1.2.1"

[dev-dependencies]
tokio.workspace = true
