[package]
name = "trellis-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust runtime entrypoint and configuration for Trellis."
publish = false

[lib]
name = "trellis_runtime"

[features]
default = ["sqlite-storage", "nats-leases"]
sqlite-storage = ["dep:rusqlite", "dep:refinery"]
nats-leases = ["dep:async-nats", "dep:bytes"]

[lints]
workspace = true

[dependencies]
async-nats = { workspace = true, optional = true }
axum.workspace = true
bytes = { workspace = true, optional = true }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite = { workspace = true, optional = true }
refinery = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "signal"] }
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
tower = { version = "0.5.2", features = ["util"] }

[[bin]]
name = "trellis-server"
path = "src/bin/trellis-server.rs"
required-features = ["sqlite-storage", "nats-leases"]
