[package]
name = "trellis-service-jobs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust jobs admin service bootstrap scaffold for Trellis."
publish = false

[dependencies]
async-nats.workspace = true
futures-util.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
time.workspace = true
trellis-contracts = { path = "../contracts", version = "0.10.0" }
trellis = { path = "../trellis", version = "0.10.0" }
