[package]
name = "trellis-service-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level Trellis service runtime facade for generated Rust services."
publish = false

[dependencies]
trellis-rs = { path = "../trellis", version = "0.10.1" }
