[package]
name = "trellis-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Server-side transport and handler primitives for Trellis services."

[dependencies]
async-nats.workspace = true
bytes.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["io-util", "sync"] }
tracing.workspace = true

[dev-dependencies]
