[package]
name = "trellis-tooling-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared tooling support for Trellis Rust CLIs."

[dependencies]
miette.workspace = true
serde_json.workspace = true
tempfile = "3.27.0"
trellis-contracts = { path = "../contracts", version = "0.7.0" }
