[package]
name = "trellis-auth-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bootstrap and request-validation adapters for the generated Trellis auth SDK."

[dependencies]
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
serde_json.workspace = true
sha2.workspace = true
trellis-client = { path = "../trellis-client", version = "0.5.1" }
trellis-auth = { path = "../trellis-auth", version = "0.5.1" }
trellis-server = { path = "../trellis-server", version = "0.5.1" }

[dev-dependencies]
trellis-sdk-auth = { path = "../../../generated/rust/sdks/auth", version = "0.5.1" }
tokio.workspace = true
