[package]
name = "trellis-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication flows and session helpers for Trellis clients."

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
trellis-client = { path = "../trellis-client", version = "0.5.0" }
trellis-sdk-auth = { path = "../trellis-sdk-auth", version = "0.5.0" }
url = "2.5"
