[package]
name = "trellis-cli-participant"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generated participant facade used by the Trellis CLI."
build = "build.rs"

[build-dependencies]
trellis-codegen-rust = { path = "../trellis-codegen-rust", version = "0.5.1" }
trellis-sdk-auth = { path = "../trellis-sdk-auth", version = "0.5.1" }
trellis-sdk-core = { path = "../trellis-sdk-core", version = "0.5.1", package = "trellis-sdk-core" }

[dependencies]
serde_json.workspace = true
trellis-auth = { path = "../trellis-auth", version = "0.5.1" }
trellis-client = { path = "../trellis-client", version = "0.5.1" }
trellis-contracts = { path = "../trellis-contracts", version = "0.5.1" }
trellis-server = { path = "../trellis-server", version = "0.5.1" }
trellis-sdk-auth = { path = "../trellis-sdk-auth", version = "0.5.1" }
trellis-sdk-core = { path = "../trellis-sdk-core", version = "0.5.1", package = "trellis-sdk-core" }

[dev-dependencies]
tempfile = "3"
trellis-codegen-rust = { path = "../trellis-codegen-rust", version = "0.5.1" }
