[package]
name = "trellis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-nats.workspace = true
clap.workspace = true
clap_complete.workspace = true
comfy-table.workspace = true
owo-colors.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
trellis-client = { path = "../trellis-client" }
trellis-auth = { path = "../trellis-auth" }
trellis-cli-participant = { path = "../trellis-cli-participant" }
trellis-codegen-rust = { path = "../trellis-codegen-rust" }
trellis-codegen-ts = { path = "../trellis-codegen-ts" }
trellis-contracts = { path = "../trellis-contracts" }
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
base64.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rand = "0.8"
tempfile = "3"

[[bin]]
name = "trellis"
path = "src/main.rs"
