[package]
name = "trellis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for generating, validating, and operating Trellis contracts and services."

[dependencies]
async-nats.workspace = true
clap.workspace = true
clap_complete.workspace = true
comfy-table.workspace = true
owo-colors.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
trellis-client = { path = "../trellis-client", version = "0.5.1" }
trellis-auth = { path = "../trellis-auth", version = "0.5.1" }
trellis-cli-participant = { path = "../trellis-cli-participant", version = "0.5.1" }
trellis-codegen-rust = { path = "../trellis-codegen-rust", version = "0.5.1" }
trellis-codegen-ts = { path = "../trellis-codegen-ts", version = "0.5.1" }
trellis-contracts = { path = "../trellis-contracts", version = "0.5.1" }
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
base64.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rand = "0.8"
tempfile = "3"

[[bin]]
name = "trellis"
path = "src/main.rs"

[dev-dependencies]
trellis-sdk-auth = { path = "../../../generated/rust/sdks/auth", version = "0.5.1" }
trellis-sdk-core = { path = "../../../generated/rust/sdks/trellis-core", version = "0.5.1", package = "trellis-sdk-core" }
