[package]
name = "trellis-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-nats.workspace = true
base64.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
nkeys = "0.4"
