[package]
name = "trellis-codegen-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust code generation for Trellis contract manifests."

[dependencies]
serde_json.workspace = true
thiserror.workspace = true
trellis-contracts = { path = "../trellis-contracts", version = "0.6.0" }
